--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
@@ -22,6 +23,7 @@
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pino-http": "^8.6.0",
     "validator": "^13.11.0"
