--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "pino-http": "^8.6.0",
+    "stripe": "^14.10.0",
     "validator": "^13.11.0"
   },
   "devDependencies": {
